--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>com.raptor</groupId>
     <artifactId>agenda-de-contatos</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <name>agenda-de-contatos</name>
     <description>agenda-de-contatos</description>
